# WebCrawler

./: .gitignore  Dockerfile  README.md  config.toml  crawl.toml  crawler.py  main.py  profile.txt  pyproject.toml  requirements.txt  scraper.py
crawler/: __main__.py  crawler.py  graphing.py  page_utils.py  scraper.py  worker.py
graphvis/: __main__.py  app.py
graphvis/static/: script.js
graphvis/templates/: base.html  graph.html
indexing/: __main__.py  indexer.py
models/: __init__.py
search_engine/: __main__.py  build_indices.py  search.py  testing.py
search_engine/backend/: app.py
search_engine/frontend/: .gitignore  index.html  package-lock.json  package.json
search_engine/frontend/src/: App.jsx
