[tool.poetry]
name = "webcrawler2"
version = "0.1.0"
description = ""
authors = ["Sp1d3R <aspy1337@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grequests = "^0.7.0"
toml = "^0.10.2"
lxml = "^5.0.1"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.25"
networkx = "^3.2.1"
ujson = "^5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
