[tool.poetry]
name = "WebCrawler"
version = "1.0"
description = "A fast, asynchronous web crawler"
authors = ["Sp1d3R <aspy1337@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
lxml = "^5.0.1"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.25"
networkx = "^3.2.1"
ujson = "^5.9.0"
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"
bs4 = "^0.0.2"
pqdm = "^0.2.0"
fuzzywuzzy = "^0.18.0"
nltk = "^3.8.1"
python-levenshtein = "^0.23.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
